--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,18 +1,26 @@
 .header-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 3fr 0.7fr 1fr 1fr 1.3fr 1fr 1fr;
-    align-items: center;
-    gap: 10px;
-
+  display: grid;
+  grid-template-columns: auto 1fr 1fr 1fr auto 1fr;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-around; /* Distributes extra space around grid items */
+  margin: 0 auto; /* Centers the grid container horizontally */
 }
 
 .column {
-    background-color: #ddd;
-    padding: 10px;
-    text-align: center;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: larger;
 }
 
-.transparent {
-    background-color: transparent;
-
+.column:hover {
+  color: #edcd1f;
+}
+.yellow-color {
+  color: #edcd1f;
+}
+.transparent-color {
+  color: black;
 }
