--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,6 @@
   font-weight: bold;
   font-size: large;
 }
-
 .column:hover {
   color: #edcd1f;
 }
@@ -15,12 +14,15 @@
 }
 .header-container {
   display: flex;
-
-  margin-bottom: 0;
-  padding-left: 0;
   padding: 5px 0;
 }
 .logo-container {
   display: "flex";
   justify-items: "center";
+}
+.header-Wrapper {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  background: white;
 }
