--- a/src/Components/Partners/Partners.css
+++ b/src/Components/Partners/Partners.css
@@ -17,3 +17,18 @@
   justify-content: center;
   align-items: center;
 }
+.img-container {
+  padding: 0 0 50px 0;
+}
+.partners-container {
+  background-color: #f7f7f7;
+  color: black;
+}
+
+.img-container {
+  margin-top: 20px; /* Adjust margin as needed */
+}
+
+.partner-image {
+  max-width: 100%;
+}
