--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@
 .col-8,
 .col-5,
 .col-4,
-.col-3 {
+.col-3,
+.col-2 {
   padding: 0 15px;
 }
 
@@ -51,6 +52,9 @@
 
 .col-3 {
   width: 25%;
+}
+.col-2 {
+  width: 16.6666666667%;
 }
 
 ul {
