--- a/src/Components/RecentProjects/RecentProjects.css
+++ b/src/Components/RecentProjects/RecentProjects.css
@@ -19,3 +19,18 @@
   height: 70px;
   background-color: white;
 }
+/* 
+.animate {
+  animation: slideUp 1s ease forwards;
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+} */
