--- a/src/Components/ComponentHeader/ComponentHeader.css
+++ b/src/Components/ComponentHeader/ComponentHeader.css
@@ -1,22 +1,22 @@
-.contact-dash-div {
+.component-heading-dash-div {
   height: 10px;
   width: 120px;
   background-color: #edcd1f;
   margin: 10px 0 55px 0;
 }
-.contact-heading {
+.component-heading {
   letter-spacing: 0.05em;
   font-weight: 900;
   font-size: 3.5rem;
   color: #1e2d3b;
 }
-/* .contact-container {
+.aligning-container {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  align-items: start;
-} */
-.heading-Content {
+  justify-content: center;
+  align-items: center;
+}
+.component-header-container {
   padding: 60px 0 10px 0;
 }
