--- a/src/Components/Partners/Partners.css
+++ b/src/Components/Partners/Partners.css
@@ -24,3 +24,44 @@
   background-color: #f7f7f7;
   color: black;
 }
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image {
+  position: relative;
+  margin: 10px;
+}
+
+.image img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5); /* White transparent overlay */
+  opacity: 0; /* Initially hidden */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.3s;
+}
+
+.overlay-text {
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.image:hover .overlay {
+  opacity: 1; /* Show overlay on hover */
+}
