--- a/src/Components/RecentProjects/RecentProjects.css
+++ b/src/Components/RecentProjects/RecentProjects.css
@@ -19,6 +19,58 @@
   height: 70px;
   background-color: white;
 }
+.project-image-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.project-image {
+  width: 430px;
+  position: relative;
+  height: 430px;
+  overflow: hidden;
+}
+
+.project-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.7s ease;
+}
+
+.project-image:hover img {
+  transform: scale(1.1);
+}
+
+.project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.project-overlay:hover {
+  opacity: 1;
+}
+
+.overlay-text {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+}
+.project-container {
+  display: flex;
+  justify-content: center;
+}
+
 /* 
 .animate {
   animation: slideUp 1s ease forwards;
