--- a/src/Components/Partners/Partners.css
+++ b/src/Components/Partners/Partners.css
@@ -47,8 +47,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5); /* White transparent overlay */
-  opacity: 0; /* Initially hidden */
+  background-color: rgba(255, 255, 255, 0.5);
+  opacity: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,5 +63,5 @@
 }
 
 .image:hover .overlay {
-  opacity: 1; /* Show overlay on hover */
+  opacity: 1;
 }
