--- a/src/Components/RecentProjects/RecentProjects.css
+++ b/src/Components/RecentProjects/RecentProjects.css
@@ -63,8 +63,8 @@
   opacity: 1;
 }
 
-.overlay-text {
-  color: white;
+.overlay-text-proj {
+  color: #3d5975;
   font-size: 24px;
   font-weight: bold;
 }
