Routing Navigation added

--- a/src/Components/RecentProjects/RecentProjects.css
+++ b/src/Components/RecentProjects/RecentProjects.css
@@ -73,6 +73,7 @@
   justify-content: center;
 }
 .allprojects-container {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
