--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -1,7 +1,7 @@
 .about-section {
   background-image: url("../../Assets/matrix-2.png");
   background-size: cover; /* Cover the entire container */
-  height: 40em;
+  height: 950px;
   background-attachment: fixed;
   display: flex;
   align-items: flex-start; /* Align items to the start (top) */
@@ -18,6 +18,6 @@
 }
 .about-content-container {
   background-color: white;
-  height: 41em;
-  margin-top: -1em;
+  height: 950px;
+  padding: 10px;
 }
