--- a/src/Components/RecentProjects/RecentProjects.css
+++ b/src/Components/RecentProjects/RecentProjects.css
@@ -22,11 +22,11 @@
 .project-image-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
-  justify-content: center;
+  justify-content: start;
 }
 
 .project-image {
+  margin: 0 10px 20px 10px;
   width: 28em;
   position: relative;
   height: 28em;
@@ -105,6 +105,11 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+}
+.proj-text {
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 /* 
 .animate {
