--- a/src/Components/Contact_Us/ContactForm.css
+++ b/src/Components/Contact_Us/ContactForm.css
@@ -108,3 +108,49 @@
   font-size: x-large;
   padding-bottom: 40px;
 }
+/* Modal Overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px; /* Increased border-radius for rounded corners */
+  box-shadow: 0px 0px 20px #0000004d; /* Increased shadow */
+  width: 90%; /* Adjust width as needed */
+  max-width: 600px; /* Maximum width */
+  max-height: 80vh; /* Maximum height to fit within viewport */
+  overflow: auto; /* Enable scrolling if content exceeds max height */
+  display: flex;
+  flex-direction: column; /* Align content vertically */
+  justify-content: center; /* Align content vertically */
+  align-items: center; /* Align content horizontally */
+  text-align: center; /* Align text horizontally */
+}
+
+/* Optionally, you can style the modal content further */
+.modal-content h2 {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.modal-content p {
+  color: #666;
+}
+
+@media screen and (max-width: 768px) {
+  .modal-content {
+    width: 90%; /* Adjust width for smaller screens */
+    max-width: 90%; /* Maximum width for smaller screens */
+  }
+}
