--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -16,8 +16,8 @@
   text-align: center;
   background-image: url("../../Assets/matrix-intro-min.png");
   background-size: cover;
-  height: 100vh;
-  width: 100vw;
+  height: 90vh;
+  /* width: 100vw; */
   background-attachment: fixed;
 }
 
@@ -27,4 +27,9 @@
   line-height: 1.2em;
   letter-spacing: 4px;
   font-size: 4vw;
+}
+@media screen and (max-width: 720px) {
+  .center-content {
+    height: 70vh;
+  }
 }
