--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -25,6 +25,7 @@
 }
 
 .header-Wrapper {
+  padding: 10px 0;
   position: fixed;
   z-index: 1000;
   width: 100vw;
@@ -53,7 +54,8 @@
   .nav-menu-container {
     background-color: white;
     position: absolute;
-    top: 50px;
+    top: 45px;
+    right: 10px;
     border: 1px solid black;
     padding: 20px 10px;
     z-index: 10000;
