--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Avenir", sans-serif;
+  font-family: "Avenir", Helvetica, Arial, sans-serif;
+
   color: #222224;
 }
 
