--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Avenir", Helvetica, Arial, sans-serif;
-
+  font-family: "Avenir", sans-serif;
   color: #222224;
 }
 
